--- a/views/index.html
+++ b/views/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Basic Socket.io Chat</title>
-    <link rel="stylesheet" href="/assets/styles.css" />
+    <link rel="stylesheet" href="/assets/css/styles.css" />
 </head>
 
 <body>
@@ -12,29 +12,11 @@
         <ul id="messages"></ul>
         <form id="chat-input" action="">
             <input id="typed-message" type="text" name="typed-message" value="" autocomplete="off">
-            <button type="button" id="send">Send</button>
+            <button type="submit" id="send">Send</button>
         </form>
     </main>
     <script src="/socket.io/socket.io.js"></script>
-    <script>
-        var socket = io();
-        var form = document.querySelector('#chat-input');
-        var messageInput = document.querySelector('#typed-message');
-        var messages = document.querySelector('#messages');
-
-        socket.on('message_send', function(msg) {
-            var textNode = document.createTextNode(msg);
-            var li = document.createElement('li');
-            li.appendChild(textNode);
-            messages.appendChild(li);
-        });
-
-        form.addEventListener('click', function(e) {
-            e.preventDefault();
-            socket.emit('message_send', messageInput.value);
-            messageInput.value = '';
-        });
-    </script>
+    <script src="/assets/js/scripts.js"></script>
 </body>
 
 </html>
