Add “{user} is typing” functionality

--- a/views/index.html
+++ b/views/index.html
@@ -14,6 +14,7 @@
             <input id="typed-message" type="text" name="typed-message" value="" autocomplete="off">
             <button type="submit" id="send">Send</button>
         </form>
+        <span id="who-typing"></span>
     </main>
     <script src="/socket.io/socket.io.js"></script>
     <script src="/assets/js/scripts.js"></script>
